--- a/config/android/library.gradle
+++ b/config/android/library.gradle
@@ -30,6 +30,17 @@ android {
         targetSdkVersion rootProject.ext.androidTargetSdkVersion
     }
 
+    buildTypes {
+        debug {
+            debuggable true
+        }
+
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
