--- a/config/quality/quality_java_main.gradle
+++ b/config/quality/quality_java_main.gradle
@@ -16,5 +16,7 @@
 
 apply from: "$rootDir/config/quality/quality.gradle"
 
+generateCheckstyleTask("", "", "main")
+generatePMDTask("", "", "main")
 generateFindbugsTask("", "", "main")
 generateCheckQualityTask("main", false)
