--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,21 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        maven {
+            // required for apt for Java
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
+
+        // apt for Java: https://plugins.gradle.org/plugin/net.ltgt.apt
+        classpath "net.ltgt.gradle:gradle-apt-plugin:0.10"
+
+        // apt for Android: https://bitbucket.org/hvisser/android-apt
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
         // FIXME migrate to using Android Studio 2.4 support for lambdas
         // See https://developer.android.com/studio/preview/features/java8-support.html
         classpath 'me.tatarka:gradle-retrolambda:3.6.0'
