--- a/config/dependencies/dependencies.gradle
+++ b/config/dependencies/dependencies.gradle
@@ -30,6 +30,7 @@ ext {
     rxJavaVersion = '2.0.8'
     javaxInjectVersion = '1'
     javaxAnnotationVersion = '1.3'
+    autoValueVersion = '1.4.1'
 
     // Android
     androidBuildToolsVersion = "25.0.2"
@@ -55,17 +56,26 @@ ext {
     // Android Development
     leakCanaryVersion = '1.5'
 
-    presentationJavaDependencies = [
+    domainDependencies = [
             rxJava         : "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
             javaxInject    : "javax.inject:javax.inject:${javaxInjectVersion}",
             javaxAnnotation: "javax.annotation:javax.annotation-api:${javaxAnnotationVersion}",
+            autoValue : "com.google.auto.value:auto-value:${autoValueVersion}"
     ]
 
-    presentationJavaTestDependencies = [
+    domainTestDependencies = [
             junit      : "junit:junit:${jUnitVersion}",
             assertj    : "org.assertj:assertj-core:${assertJVersion}",
             mockitoCore: "org.mockito:mockito-core:${mockitoVersion}",
     ]
+
+    dataDependencies = domainDependencies
+
+    dataTestDependencies = domainTestDependencies
+
+    presentationJavaDependencies = domainDependencies
+
+    presentationJavaTestDependencies = domainTestDependencies
 
     presentationAndroidDependencies = presentationJavaDependencies + [
             rxAndroid                     : "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
@@ -81,12 +91,4 @@ ext {
             espressoCore  : "com.android.support.test.espresso:espresso-core:${espressoCoreVersion}",
             espressoRunner: "com.android.support.test:runner:${espressoRunnerVersion}"
     ]
-
-    domainDependencies = presentationJavaDependencies
-
-    domainTestDependencies = presentationJavaTestDependencies
-
-    dataDependencies = presentationJavaDependencies
-
-    dataTestDependencies = presentationJavaTestDependencies
 }
