--- a/data/build.gradle
+++ b/data/build.gradle
@@ -20,11 +20,14 @@ dependencies {
     def dataDependencies = rootProject.ext.dataDependencies
     def testDependencies = rootProject.ext.dataTestDependencies
 
+    apt dataDependencies.autoValue
+
     implementation project(':domain')
     implementation dataDependencies.rxJava
     implementation dataDependencies.javaxInject
 
     compileOnly dataDependencies.javaxAnnotation
+    compileOnly dataDependencies.autoValue
 
     testImplementation testDependencies.junit
     testImplementation testDependencies.assertj
