--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -20,10 +20,13 @@ dependencies {
     def domainDependencies = rootProject.ext.domainDependencies
     def domainTestDependencies = rootProject.ext.domainTestDependencies
 
+    apt domainDependencies.autoValue
+
     implementation domainDependencies.rxJava
     implementation domainDependencies.javaxInject
 
     compileOnly domainDependencies.javaxAnnotation
+    compileOnly domainDependencies.autoValue
 
     testImplementation domainTestDependencies.junit
     testImplementation domainTestDependencies.assertj
