Fixed check task and proguard

--- a/config/android/library.gradle
+++ b/config/android/library.gradle
@@ -28,17 +28,7 @@ android {
     defaultConfig {
         minSdkVersion rootProject.ext.androidMinSdkVersion
         targetSdkVersion rootProject.ext.androidTargetSdkVersion
-    }
-
-    buildTypes {
-        debug {
-            debuggable true
-        }
-
-        release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     compileOptions {
