--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,13 @@ buildscript {
     }
 
     dependencies {
+        // Note that annotation processors are now included in the Android gradle plugin starting at v2.2
+        // Note that custom android-apt annotation processor is deprecated as of 2.2
+        // See https://bitbucket.org/hvisser/android-apt/wiki/Migration
         classpath 'com.android.tools.build:gradle:2.3.0'
 
         // apt for Java: https://plugins.gradle.org/plugin/net.ltgt.apt
         classpath "net.ltgt.gradle:gradle-apt-plugin:0.10"
-
-        // apt for Android: https://bitbucket.org/hvisser/android-apt
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // FIXME migrate to using Android Studio 2.4 support for lambdas
         // See https://developer.android.com/studio/preview/features/java8-support.html
