--- a/config/dependencies/dependencies.gradle
+++ b/config/dependencies/dependencies.gradle
@@ -29,7 +29,6 @@ ext {
     // Java
     rxJavaVersion = '2.0.8'
     javaxInjectVersion = '1'
-    javaxAnnotationVersion = '1.3'
     autoValueVersion = '1.4.1'
     retrofitVersion = '2.2.0'
 
@@ -57,30 +56,19 @@ ext {
     // Android Development
     leakCanaryVersion = '1.5'
 
-    domainDependencies = [
-            rxJava         : "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
-            javaxInject    : "javax.inject:javax.inject:${javaxInjectVersion}",
-            javaxAnnotation: "javax.annotation:javax.annotation-api:${javaxAnnotationVersion}",
-            autoValue      : "com.google.auto.value:auto-value:${autoValueVersion}"
+    javaDependencies = [
+            rxJava     : "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
+            javaxInject: "javax.inject:javax.inject:${javaxInjectVersion}",
+            autoValue  : "com.google.auto.value:auto-value:${autoValueVersion}"
     ]
 
-    domainTestDependencies = [
+    javaTestDependencies = [
             junit      : "junit:junit:${jUnitVersion}",
             assertj    : "org.assertj:assertj-core:${assertJVersion}",
             mockitoCore: "org.mockito:mockito-core:${mockitoVersion}",
     ]
 
-    dataDependencies = domainDependencies + [
-            retrofit: "com.squareup.retrofit2:retrofit:${retrofitVersion}"
-    ]
-
-    dataTestDependencies = domainTestDependencies
-
-    presentationJavaDependencies = domainDependencies
-
-    presentationJavaTestDependencies = domainTestDependencies
-
-    presentationAndroidDependencies = presentationJavaDependencies + [
+    androidDependencies = javaDependencies + [
             rxAndroid                     : "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
             appCompat                     : "com.android.support:appcompat-v7:$androidSupportVersion",
             recyclerView                  : "com.android.support:recyclerview-v7:${androidSupportVersion}",
@@ -89,9 +77,27 @@ ext {
             leakCanary                    : "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
     ]
 
-    presentationAndroidTestDependencies = presentationJavaTestDependencies + [
+    androidTestDependencies = javaTestDependencies + [
             mockitoAndroid: "org.mockito:mockito-android:${mockitoVersion}",
             espressoCore  : "com.android.support.test.espresso:espresso-core:${espressoCoreVersion}",
             espressoRunner: "com.android.support.test:runner:${espressoRunnerVersion}"
     ]
+
+    domainDependencies = javaDependencies
+
+    domainTestDependencies = javaTestDependencies
+
+    dataDependencies = javaDependencies + [
+            retrofit: "com.squareup.retrofit2:retrofit:${retrofitVersion}"
+    ]
+
+    dataTestDependencies = javaTestDependencies
+
+    presentationJavaDependencies = javaDependencies
+
+    presentationJavaTestDependencies = javaTestDependencies
+
+    presentationAndroidDependencies = androidDependencies
+
+    presentationAndroidTestDependencies = androidTestDependencies
 }
