--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+rootProject.name = "business-search"
+
 include ':presentation-java'
 include ':presentation-java-noui'
 include ':presentation-java-swing'
