--- a/presentation-java-swing-mvp/build.gradle
+++ b/presentation-java-swing-mvp/build.gradle
@@ -16,7 +16,7 @@
 
 apply from: "$rootDir/config/java/application.gradle"
 
-mainClassName = "com.vestrel00.business.search.presentation.java.swing.Application"
+mainClassName = "com.vestrel00.business.search.presentation.java.swing.mvp.Application"
 
 dependencies {
     def presentationJavaDependencies = rootProject.ext.presentationJavaDependencies
@@ -25,7 +25,6 @@ dependencies {
     compile project(':presentation-java')
 
     compile presentationJavaDependencies.rxJava
-    compile presentationJavaDependencies.javaxInject
 
     testCompile presentationJavaTestDependencies.junit
     testCompile presentationJavaTestDependencies.assertj
