--- a/data/build.gradle
+++ b/data/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation dataDependencies.rxJava
     implementation dataDependencies.javaxInject
     implementation dataDependencies.retrofit
+    implementation dataDependencies.retrofitGsonConverter
+    implementation dataDependencies.retrofitRxJavaAdapter
+    implementation dataDependencies.gson
 
     compileOnly dataDependencies.autoValue
 
