--- a/config/dependencies/dependencies.gradle
+++ b/config/dependencies/dependencies.gradle
@@ -31,7 +31,7 @@ ext {
     javaxInjectVersion = '1'
     autoValueVersion = '1.4.1'
     retrofitVersion = '2.2.0'
-    gsonVersion = '2.8.0'
+    jacksonVersion = '2.8.8'
 
     // Android
     androidBuildToolsVersion = "25.0.2"
@@ -89,10 +89,12 @@ ext {
     domainTestDependencies = javaTestDependencies
 
     dataDependencies = javaDependencies + [
-            retrofit             : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
-            retrofitGsonConverter: "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
-            retrofitRxJavaAdapter: "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
-            gson                 : "com.google.code.gson:gson:${gsonVersion}"
+            retrofit                : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
+            retrofitRxJavaAdapter   : "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
+            retrofitJacksonConverter: "com.squareup.retrofit2:converter-jackson:${retrofitVersion}",
+            jacksonCore             : "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}",
+            jacksonDatabind         : "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
+            jacksonAnnotations      : "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}",
     ]
 
     dataTestDependencies = javaTestDependencies
