--- a/config/java/application.gradle
+++ b/config/java/application.gradle
@@ -17,7 +17,11 @@
 apply plugin: 'application'
 apply plugin: 'idea' // required for net.ltgt.apt plugin
 apply plugin: "net.ltgt.apt"
+apply plugin: 'me.tatarka.retrolambda'
 
 apply from: "$projectDir/config/coverage/jacoco.gradle"
 apply from: "$rootDir/config/documentation/javadoc_java_main.gradle"
 apply from: "$rootDir/config/quality/quality_java_main.gradle"
+
+targetCompatibility = '1.8'
+sourceCompatibility = '1.8'
