Replaced retrolambda with Jack

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
         jcenter()
         mavenCentral()
         maven {
-            // required for apt for Java
+            // required for apt for Java (net.ltgt.gradle:gradle-apt-plugin)
             url "https://plugins.gradle.org/m2/"
         }
     }
@@ -32,10 +32,6 @@ buildscript {
 
         // apt for Java: https://plugins.gradle.org/plugin/net.ltgt.apt
         classpath "net.ltgt.gradle:gradle-apt-plugin:0.10"
-
-        // FIXME migrate to using Android Studio 2.4 support for lambdas
-        // See https://developer.android.com/studio/preview/features/java8-support.html
-        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
     }
 }
 
